--- a/client/app.scss
+++ b/client/app.scss
@@ -7,7 +7,7 @@
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/flatly/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/journal/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/litera/bootstrap.min.css');
-@import url('//unpkg.com/bootswatch@5.1.3/dist/lumen/bootstrap.min.css');
+// @import url('//unpkg.com/bootswatch@5.1.3/dist/lumen/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/lux/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/materia/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/minty/bootstrap.min.css');
