--- a/client/app.scss
+++ b/client/app.scss
@@ -1,5 +1,4 @@
-// @import url('//unpkg.com/bootstrap@5.1.3/dist/css/bootstrap.min.css');
-
+@import url('//unpkg.com/bootstrap@5.1.3/dist/css/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/cerulean/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/cosmo/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/cyborg/bootstrap.min.css');
