--- a/client/app.scss
+++ b/client/app.scss
@@ -1,4 +1,4 @@
-@import url('//unpkg.com/bootstrap@5.1.3/dist/css/bootstrap.min.css');
+// @import url('//unpkg.com/bootstrap@5.1.3/dist/css/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/cerulean/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/cosmo/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/cyborg/bootstrap.min.css');
@@ -23,7 +23,7 @@
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/united/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/vapor/bootstrap.min.css');
 // @import url('//unpkg.com/bootswatch@5.1.3/dist/yeti/bootstrap.min.css');
-// @import url('//unpkg.com/bootswatch@5.1.3/dist/zephyr/bootstrap.min.css');
+@import url('//unpkg.com/bootswatch@5.1.3/dist/zephyr/bootstrap.min.css');
 
 @import url('//cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
 @import url('//cdnjs.cloudflare m/ajax/libs/font-awesome/5.15.2/css/all.min.css');
@@ -32,3 +32,8 @@
 @import url('//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/regular.min.css');
 @import url('//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css');
 @import url('element-ui/lib/theme-chalk/index.css');
+
+// Pure CSS scrollbars | https://codepen.io/GhostRider/pen/GHaFw
+.scrollbar-thin-dark::-webkit-scrollbar-track {background-color: transparent;}
+.scrollbar-thin-dark::-webkit-scrollbar {width: 6px; background-color: transparent;}
+.scrollbar-thin-dark::-webkit-scrollbar-thumb { background-color: #ffffff44;}
