--- a/client/app.scss
+++ b/client/app.scss
@@ -34,6 +34,10 @@
 @import url('element-ui/lib/theme-chalk/index.css');
 
 // Pure CSS scrollbars | https://codepen.io/GhostRider/pen/GHaFw
+.scrollbar-thin::-webkit-scrollbar-track {background-color: transparent;}
+.scrollbar-thin::-webkit-scrollbar {width: 10px; background-color: transparent;}
+.scrollbar-thin::-webkit-scrollbar-thumb { background-color: #00000066;}
+
 .scrollbar-thin-dark::-webkit-scrollbar-track {background-color: transparent;}
-.scrollbar-thin-dark::-webkit-scrollbar {width: 6px; background-color: transparent;}
+.scrollbar-thin-dark::-webkit-scrollbar {width: 10px; background-color: transparent;}
 .scrollbar-thin-dark::-webkit-scrollbar-thumb { background-color: #ffffff44;}
